# tqsdk_OpenSource

./: .gitignore  CODEOWNERS  PolarSoul.md  README.md  capabilities.json  polaris.json  roadmap.md  worker.md
trading-platform/: .gitignore  alembic.ini  lobster_adapter.py  pyproject.toml  requirements-ml.txt  requirements.txt
trading-platform/.github/workflows/: ci.yml
trading-platform/Start/: com.tqtrader.strategy-worker.plist  install-worker-launchd.sh  setup-ml-env.sh
trading-platform/apps/api/: main.py  requirements.txt
trading-platform/apps/skills/: package.json
trading-platform/apps/web/: UI-REFACTOR-PLAN.md  index.html  (+3 more)
trading-platform/config/: strategy_worker.json
trading-platform/docs/: ALPHA_PLAN.md  results-index.md
trading-platform/scripts/: _archived_run_all_backtests.py  check_creds.sh  deploy_volbar_champion.py  diagnose_v4_pullback.py  download_crypto_data.py  download_funding_rates.py  download_hires.py  download_premium_index.py  heartbeat_updater.sh  leverage_backtest.py  optimize_crypto_params.py  optuna_crypto_tune.py  optuna_intraday_reversal_tune.py  optuna_scalp_tune.py  optuna_v4_pullback_tune.py  optuna_v4_tune.py  optuna_whale_tune.py  overfit_data.py  paper_trading.py  run-phase-a-gate.py  run-phase-b-smoke.py  run-phase-c-smoke.py  run_advanced_analysis.py  run_agentic_loop.py  run_aggressive_backtest.py  run_alpha_gate_btc.py  run_btc_factor_mining.py  run_btc_factor_strategy_backtest.py  run_crypto_backtest.py  run_futures_backtest.py  run_h2_robustness_grid.py  run_holding_period_sweep.py  run_live_paper.py  run_overfit_validation.py  run_paper_trading.py  run_smoke.py  run_strategy_worker.py  run_v4_pullback_fusion.py  run_volbar_paper_probe.py  run_wf_robust_search.py  (+8 more)
trading-platform/src/: __init__.py  optimizer.py
trading-platform/tests/: __init__.py  conftest.py
(+247 files in other folders)
